# microbit-ble-gamepad

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs
src/ble/: advertiser.rs  battery.rs  gatt.rs  hid.rs  mod.rs  stick.rs
src/board/: mod.rs
src/io/: mod.rs
src/io/audio/: mod.rs
src/io/display/: bitmap.rs  mod.rs
