[package]
name = "ble-gamepad"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
lsm303agr = "1.1.0"
heapless = "0.8.0"
static_cell = "2.0.0"

defmt-rtt = "0.4"
defmt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# embassy dependencies
embassy-sync = { version = "^0.6.0", default-features = false }
embassy-futures = { version = "^0.1.0", default-features = false }
embassy-executor = { version = "^0.6.1", default-features = false, features = [
    "integrated-timers",
    "defmt",
    "arch-cortex-m",
    "executor-interrupt",
    "executor-thread",
] }
embassy-time = { version = "^0.3.0", default-features = false, features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

# nrf52833 dependencies
microbit-bsp = "0.3.0"

# BLE dependencies
bt-hci = { version = "0.1.1", default-features = false, features = ["defmt"] }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = [
    "defmt",
] }
nrf-sdc = { version = "0.1.0", default-features = false, features = [
    "nrf52833",
    "defmt",
    "peripheral",
] }
nrf-mpsl = { version = "0.1.0", default-features = false, features = [
    "nrf52833",
    "defmt",
    "critical-section-impl",
] }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[patch.crates-io]
# embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
# embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
# embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
# embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "1cfd5370ac012814b7b386ba9ad8499529bdde4e" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "3702af909d31cd81c62f15e1aa9d5f637ec935fa" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "3702af909d31cd81c62f15e1aa9d5f637ec935fa" }
