[package]
name = "ble-gamepad"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7"
lsm303agr = "1.1.0"
heapless = "0.8.0"

defmt-rtt = "0.4"
defmt = "0.3.10"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# embassy dependencies
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-futures = { version = "0.1.1" }
embassy-executor = { version = "0.7.0", default-features = false, features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "task-arena-size-32768",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

# nrf52833 dependencies
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp.git", features = [
    "trouble",
], branch = "main" }

# BLE dependencies
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = [
    "defmt",
], rev = "a1daee269deee25fbb6236cb599a8fb5919c02b7" }
static_cell = "2.1.0"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
